--- a/.github/workflows/iverilog_comple.yml
+++ b/.github/workflows/iverilog_comple.yml
@@ -27,5 +27,5 @@ jobs:
           cd rom
           git checkout esola-thomas/Init_ROM_from_mem_and_error_handler
           mkdir -p out
-          iverilog -o out/rom.vpp -s tb_rom verif/tb_rom.sv rtl/rom.sv rtl/init_rom.mem
+          iverilog -o out/rom.vpp -s tb_rom verif/tb_rom.sv rtl/rom.sv -D INIT_FILE=\"init_rom.mem\"
           tree
