--- a/.github/workflows/iverilog_comple.yml
+++ b/.github/workflows/iverilog_comple.yml
@@ -27,5 +27,6 @@ jobs:
           cd rom
           git checkout esola-thomas/Init_ROM_from_mem_and_error_handler
           mkdir -p out
-          iverilog -o out/tb_rom.vvp -s tb_rom verif/tb_rom.sv rtl/rom.sv -y ./
+          iverilog -o out/tb_rom -s tb_rom verif/tb_rom.sv rtl/rom.sv -y ./
+          vvp out/tb_rom
           tree
