--- a/.github/workflows/iverilog_comple.yml
+++ b/.github/workflows/iverilog_comple.yml
@@ -27,8 +27,8 @@ jobs:
           cd rom
           git checkout esola-thomas/Init_ROM_from_mem_and_error_handler
           mkdir -p out
-          iverilog -o out/tb_rom -s tb_rom verif/tb_rom.sv rtl/rom.sv -y ./
-          tree
+          iverilog -o out/rom_sim -s tb_rom verif/tb_rom.sv rtl/rom.sv -y ./
           cd out/
-          vvp rom.vpp
+          vvp rom_sim
           tree
+          echo Build COMPLETE
